# jvis-core

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/commands/: api.md  architect.md  dev.md  devsecops.md  frontend.md  pm.md  prisma.md  qa.md  rust.md  sm.md  tutorial.md
.claude/commands/journey/: complete.md  diagnose.md  gate.md  next.md  start.md  status.md
.claude/commands/workflows/: deep-analysis.md  doc-daily.md  doc-init.md  doc-update.md  ecommerce-validation.md  full-analysis.md  gaming-validation.md  integration-project.md  jvis-update.md  marketing-brand-launch.md  marketing-campaign.md  marketing-content-production.md  marketing-crisis-comms.md  marketing-crm-retention.md  marketing-event.md  marketing-full-process.md  marketing-ideation.md  marketing-influencer-campaign.md  marketing-paid-media.md  marketing-product-launch.md  marketing-seo-audit.md  post-upgrade.md  project-resume.md  project-upgrade.md  saas-validation.md  security-audit.md  security-plan.md
.claude/hooks/: post-tool-use-commit.sh  pre-tool-use-scaffold.sh  pre-tool-use-test.sh
.claude/skills/agents/: SKILL.md
.claude/skills/python-patterns/: SKILL.md
.github/workflows/: ci.yml  publish-pypi.yml  security.yml  tests.yml
.jvis/: VERSION.yaml  core-config.yaml  install-manifest.yaml  user-guide.md
.jvis/agent-engine/: engine.py  engine_extras.py
.jvis/agents/: README.md
.jvis/journey/: README.md  phases.yaml  state-template.yaml
.jvis/templates/: README.md  architecture-tmpl.yaml  brainstorming-output-tmpl.yaml  brownfield-architecture-tmpl.yaml  brownfield-prd-tmpl.yaml  business-model-canvas-tmpl.yaml  checkpoint-report-tmpl.md  competitive-analysis-tmpl.yaml  competitor-analysis-tmpl.yaml  component-library-tmpl.yaml  context-map-tmpl.yaml  deep-analysis-report-tmpl.md  design-system-tmpl.yaml  development-handoff-tmpl.md  epic-tmpl.yaml  front-end-architecture-tmpl.yaml  front-end-spec-tmpl.yaml  fullstack-architecture-tmpl.yaml  gtm-plan-tmpl.yaml  lean-canvas-tmpl.yaml  market-research-tmpl.yaml  marketing-handoff-tmpl.md  prd-tmpl.yaml  pricing-strategy-tmpl.yaml  project-brief-tmpl.yaml  project-composition-tmpl.yaml  qa-gate-tmpl.yaml  security-audit-tmpl.yaml  security-plan-tmpl.yaml  step-report-tmpl.md  story-fullstack-mobile-tmpl.md  story-fullstack-tmpl.md  story-tmpl.yaml  threat-model-tmpl.yaml  unit-economics-tmpl.yaml  winning-product-score-tmpl.yaml  yolo-summary-tmpl.md
.jvis/utils/: README.md  bmad-doc-template.md  workflow-management.md
.jvis/workflows/: README.md  brownfield-fullstack.yaml  brownfield-service.yaml  brownfield-ui.yaml  greenfield-fullstack.yaml  greenfield-service.yaml  greenfield-ui.yaml
docs/: DEVELOPMENT-WORKFLOW.md  INDEX.md  PYPI-PUBLISH-GUIDE.md  QUICKSTART.md  RELEASE-CHECKLIST.md
docs/adr/: ADR-001-core-principles-and-agent-improvements.md  ADR-002-functional-stack-scaffolding.md  ADR-003-functional-scaffolds-nodejs-react.md  ADR-004-quality-hardening-architecture.md  ADR-005-executable-development-plans.md  ADR-006-plan-migration-on-update.md  ADR-007-version-management.md
docs/architecture/: coding-standards.md  overview.md  source-tree.md  tech-stack.md
docs/guides/: quickstart.md
docs/manuals/: INDEX.md  manual-context.md  manual-templates.md
src/jvis/: CLAUDE.md  __init__.py  __main__.py  cli.py  log_config.py  version_tracking.py
tests/: CLAUDE.md  README.md  conftest.py  run_all.sh
tests/integration/: test_agent_generation.py  test_functional_scaffolds.py  test_new_command.py  test_new_project.py  test_package_install.py  test_wheel_install.py  test_workflow_commands.py
tests/smoke/: test_agents.sh  test_cli.sh  test_templates.sh
tests/unit/: test_add_command.py  test_cli.py  test_cli_verbose.py  test_database_selector.py  test_detection.py  test_entity_rename.py  test_error_recovery.py  test_framework_install.py  test_fs_utils.py  test_git_utils.py  test_jvis_tasks.py  test_jvis_templates.py  test_log_config.py  test_naming.py  test_primary_command.py  test_project_type.py  test_scaffold.py  test_stack_registry.py  test_validation.py  test_version_management.py  test_version_tracking_full.py
(+396 files in other folders)
